close modal buttons bug fixed

--- a/index.html
+++ b/index.html
@@ -508,10 +508,7 @@
 	    <div class="projects-modal modal fade" id="projectsModal1" tabindex="-1" role="dialog" aria-hidden="true">
 	        <div class="modal-content">
 	            <div class="close-modal" data-dismiss="modal">
-	                <div class="lr">
-	                    <div class="rl">
-	                    </div>
-	                </div>
+	                <i class="fa fa-times fa-3x " data-dismiss="modal" style="color:black;"></i>
 	            </div>
 	            <div class="container">
 	                <div class="row">
@@ -583,10 +580,7 @@
 	    <div class="projects-modal modal fade" id="projectsModal2" tabindex="-1" role="dialog" aria-hidden="true">
 	        <div class="modal-content">
 	            <div class="close-modal" data-dismiss="modal">
-	                <div class="lr">
-	                    <div class="rl">
-	                    </div>
-	                </div>
+	                <i class="fa fa-times fa-3x " data-dismiss="modal" style="color:black;"></i>
 	            </div>
 	            <div class="container">
 	                <div class="row">
@@ -674,10 +668,7 @@
 	    <div class="projects-modal modal fade" id="projectsModal3" tabindex="-1" role="dialog" aria-hidden="true">
 	        <div class="modal-content">
 	            <div class="close-modal" data-dismiss="modal">
-	                <div class="lr">
-	                    <div class="rl">
-	                    </div>
-	                </div>
+	                <i class="fa fa-times fa-3x " data-dismiss="modal" style="color:black;"></i>
 	            </div>
 	            <div class="container">
 	                <div class="row">
@@ -745,10 +736,7 @@
 	    <div class="projects-modal modal fade" id="projectsModal4" tabindex="-1" role="dialog" aria-hidden="true">
 	        <div class="modal-content">
 	            <div class="close-modal" data-dismiss="modal">
-	                <div class="lr">
-	                    <div class="rl">
-	                    </div>
-	                </div>
+	                <i class="fa fa-times fa-3x " data-dismiss="modal" style="color:black;"></i>
 	            </div>
 	            <div class="container">
 	                <div class="row">
@@ -804,10 +792,7 @@
 	    <div class="projects-modal modal fade" id="projectsModal5" tabindex="-1" role="dialog" aria-hidden="true">
 	        <div class="modal-content">
 	            <div class="close-modal" data-dismiss="modal">
-	                <div class="lr">
-	                    <div class="rl">
-	                    </div>
-	                </div>
+	                <i class="fa fa-times fa-3x " data-dismiss="modal" style="color:black;"></i>
 	            </div>
 	            <div class="container">
 	                <div class="row">
@@ -887,10 +872,7 @@
 	    <div class="projects-modal modal fade" id="projectsModal6" tabindex="-1" role="dialog" aria-hidden="true">
 	        <div class="modal-content">
 	            <div class="close-modal" data-dismiss="modal">
-	                <div class="lr">
-	                    <div class="rl">
-	                    </div>
-	                </div>
+	                <i class="fa fa-times fa-3x " data-dismiss="modal" style="color:black;"></i>
 	            </div>
 	            <div class="container">
 	                <div class="row">
@@ -966,10 +948,7 @@
 	    <div class="projects-modal modal fade" id="projectsModal7" tabindex="-1" role="dialog" aria-hidden="true">
 	        <div class="modal-content">
 	            <div class="close-modal" data-dismiss="modal">
-	                <div class="lr">
-	                    <div class="rl">
-	                    </div>
-	                </div>
+	                <i class="fa fa-times fa-3x " data-dismiss="modal" style="color:black;"></i>
 	            </div>
 	            <div class="container">
 	                <div class="row">
@@ -1011,10 +990,7 @@
 	    <div class="projects-modal modal fade" id="projectsModal8" tabindex="-1" role="dialog" aria-hidden="true">
 	        <div class="modal-content">
 	            <div class="close-modal" data-dismiss="modal">
-	                <div class="lr">
-	                    <div class="rl">
-	                    </div>
-	                </div>
+	                <i class="fa fa-times fa-3x " data-dismiss="modal" style="color:black;"></i>
 	            </div>
 	            <div class="container">
 	                <div class="row">
@@ -1073,10 +1049,7 @@
 	    <div class="projects-modal modal fade" id="projectsModal9" tabindex="-1" role="dialog" aria-hidden="true">
 	        <div class="modal-content">
 	            <div class="close-modal" data-dismiss="modal">
-	                <div class="lr">
-	                    <div class="rl">
-	                    </div>
-	                </div>
+	                <i class="fa fa-times fa-3x " data-dismiss="modal" style="color:black;"></i>
 	            </div>
 	            <div class="container">
 	                <div class="row">
@@ -1152,10 +1125,7 @@
 	    <div class="projects-modal modal fade" id="projectsModal10" tabindex="-1" role="dialog" aria-hidden="true">
 	        <div class="modal-content">
 	            <div class="close-modal" data-dismiss="modal">
-	                <div class="lr">
-	                    <div class="rl">
-	                    </div>
-	                </div>
+	                <i class="fa fa-times fa-3x " data-dismiss="modal" style="color:black;"></i>
 	            </div>
 	            <div class="container">
 	                <div class="row">
@@ -1251,10 +1221,7 @@
 	    <div class="projects-modal modal fade" id="projectsModal11" tabindex="-1" role="dialog" aria-hidden="true">
 	        <div class="modal-content">
 	            <div class="close-modal" data-dismiss="modal">
-	                <div class="lr">
-	                    <div class="rl">
-	                    </div>
-	                </div>
+	                <i class="fa fa-times fa-3x " data-dismiss="modal" style="color:black;"></i>
 	            </div>
 	            <div class="container">
 	                <div class="row">
@@ -1310,10 +1277,7 @@
 	    <div class="projects-modal modal fade" id="projectsModal12" tabindex="-1" role="dialog" aria-hidden="true">
 	        <div class="modal-content">
 	            <div class="close-modal" data-dismiss="modal">
-	                <div class="lr">
-	                    <div class="rl">
-	                    </div>
-	                </div>
+	                <i class="fa fa-times fa-3x " data-dismiss="modal" style="color:black;"></i>
 	            </div>
 	            <div class="container">
 	                <div class="row">
