typo fixed at maxphone

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 							            <span class="glyphicon glyphicon-chevron-right"></span>
 							        </a>
 							    </div>
-	                            <p>Currently interning as an Android Application called "MaXphone" and other apps at MaXentric Technologies LLC. MaXphone connects commercial Android smartphones to land-mobile radio (LMR) using open platforms. A cost effective, flexible, approach to improving first responder networks. Project details can be found <a target="_blank" href="http://maxentric.com/products/maxphone">here</a>. <p>
+	                            <p>Currently interning as an Android Developer at MaXentric Technologies LLC, developing an application called "MaXphone" and other apps. MaXphone connects commercial Android smartphones to land-mobile radio (LMR) using open platforms. A cost effective, flexible, approach to improving first responder networks. Project details can be found <a target="_blank" href="http://maxentric.com/products/maxphone">here</a>. <p>
 	                            <p class="tech-used">Java and C++ were used for Android Application and library. HTML5, php, MySQL, and Apache2 server were used for database.</p>
 	                            <ul class="list-inline item-details">
 	                                <li>Company:
