email address fixed

--- a/decaf.html
+++ b/decaf.html
@@ -61,6 +61,12 @@
 </head>
 <body>
 	<div class=container>
+		<div id="box" class="asdf">
+    <ul id="tab">
+        <li> &lt; </li>
+    </ul>
+		</div>
+		
 		<h1>UCSD DECaF 2016</h1> 
 		<br/>
 		<div id="data">
