--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 	                    </div>
 	                    <div class="footer-col col-md-4">
 	                        <h3>Contact</h3>
-	                        <a target="_blank" href="mailto:seanoh1989@gmail.com" class="email-link">seanoh1989@gmail.com</a>
+	                        <a target="_blank" href="mailto:saehunseanoh@gmail.com" class="email-link">saehunseanoh@gmail.com</a>
 	                    </div>
 	                </div>
 	            </div>
