location removed. top menu modified

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	                        <a href="#projects">PROJECTS</a>
 	                    </li>
 	                    <li class="page-scroll">
-	                        <a href="#resume">RESUME</a>
+	                        <a href="#resume">RESUME & CONTACT</a>
 	                    </li>
 	                </ul>
 	            </div>
@@ -464,11 +464,7 @@
 	        <div class="footer-above">
 	            <div class="container">
 	                <div class="row">
-	                    <div class="footer-col col-md-4">
-	                        <h3>Location</h3>
-	                        <p>San Diego, CA 92122</p>
-	                    </div>
-	                    <div class="footer-col col-md-4">
+	                    <div class="footer-col col-md-6">
 	                        <h3>Links</h3>
 	                        <ul class="list-inline">
 	                            <li>
@@ -485,7 +481,7 @@
 	                            </li>
 	                        </ul>
 	                    </div>
-	                    <div class="footer-col col-md-4">
+	                    <div class="footer-col col-md-6">
 	                        <h3>Contact</h3>
 	                        <a target="_blank" href="mailto:saehunseanoh@gmail.com" class="email-link">saehunseanoh@gmail.com</a>
 	                    </div>
