ganjeek.com link removed.

--- a/index.html
+++ b/index.html
@@ -1092,11 +1092,11 @@
 	                            <p class="tech-used"> LAMP stack was used for this web service. </p>
 	                            <ul class="list-inline item-details">
 	                                <li>Client:
-	                                    <strong><a target="_blank" href="http://ganjeek.com">Ganjeek.com </a> - Service Stopped due to client's personal reason
+	                                    <strong>Ganjeek.com (Service Stopped due to client's personal reason)
 	                                    </strong>
 	                                </li>
 	                                <li>Date:
-	                                    <strong>November 2014 - December 2014
+	                                    <strong>October 2014 - September 2015
 	                                    </strong>
 	                                </li>
 	                                <li>Service:
