testing alert onload

--- a/bongsik.html
+++ b/bongsik.html
@@ -18,7 +18,7 @@
 	<!-- Custom stylesheet -->
 	<link rel="stylesheet" href="css/bongsik-theme.css">
 </head>
-<body>
+<body onload="alert('hi');">
 <h1>
 	중년기사 김봉식 원페이지 백과사전
 </h1>
