--- a/bongsik.html
+++ b/bongsik.html
@@ -15,10 +15,21 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
+	<!-- Spinner -->
+	<link rel="stylesheet" href="css/bongsik-spinner.css">
+
 	<!-- Custom stylesheet -->
 	<link rel="stylesheet" href="css/bongsik-theme.css">
 </head>
-<body onload="alert('hi');">
+<body onLoad="hideSpinner();">
+	<div class="sk-wave">
+	        <div class="sk-rect sk-rect1"></div>
+	        <div class="sk-rect sk-rect2"></div>
+	        <div class="sk-rect sk-rect3"></div>
+	        <div class="sk-rect sk-rect4"></div>
+	        <div class="sk-rect sk-rect5"></div>
+	    </div>
+	<div class="spinner">
 <h1>
 	중년기사 김봉식 원페이지 백과사전
 </h1>
@@ -897,6 +908,7 @@
 	</table>
 </div>
 
+</div>
 
 	<!-- Jquery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -909,5 +921,16 @@
 
 	<!-- Handlebars -->
 	<script src="js/handlebars-v4.0.5.js"></script>
+
+	<script type="text/javascript">
+		var hideSpinner = function() {
+			var spinnerDiv = document.getElementsByClassName("spinner");
+			spinnerDiv[0].style.position = 'inherit';
+			spinnerDiv[0].style.opacity = 1;
+
+			var wave = document.getElementsByClassName("sk-wave");
+			wave[0].style.display = 'none';
+		};
+	</script>
 </body>
 </html>
