--- a/wedding.html
+++ b/wedding.html
@@ -7,36 +7,32 @@
     <link rel="stylesheet" href="bs4/bootstrap.min.css">
     <script src="bs4/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/wedding_stylesheet.css">
-    <title> hello world</title>
+    <link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="stylesheet">
+    <title>Seanna's Wedding Toasts</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Seanna's Wedding Toasts</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav mr-auto">
-          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#toast3">Toasts</a>
-          <a class="nav-item nav-link" href="#">Pricing</a>
-        </div>
-      </div>
     </nav>
-<div class="container-md mt-md-3" id="toast">
-  <h1> Ivy & Christy's Toast</h1>
-  <div class="btn-group mt-md-3" role="group">
-    <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vRxZwvmHNu-_uP7Rb2e5pR2ne_iPjZigRWKUEhjkzDO66xGK5TPYqcbapbOGsl5OVIw6AglA5VlRrlL/pub">English</a>
-    <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vQjyJZm5wxRw4-Drgo9mDnl70TvSyIj4Luk9oLi2ZKGkIgQqUWwnpEni4vX3vv827WNo4NM3mIYcnht/pub">한국어</a>
-    <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vQPUabLRY_hNUHJ1UZ_I71Z5iS8nGGf9FbJUxISGyaCfrulNu7jLBvhin5suu2BZE69zbkiLFmbVI7X/pub">日本語</a>
-  </div>
-  <h1 class="mt-md-5"> Inchul's Toast</h1>
-  <div class="btn-group mt-md-3" role="group">
-    <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vRxZwvmHNu-_uP7Rb2e5pR2ne_iPjZigRWKUEhjkzDO66xGK5TPYqcbapbOGsl5OVIw6AglA5VlRrlL/pub">English</a>
-    <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vRxZwvmHNu-_uP7Rb2e5pR2ne_iPjZigRWKUEhjkzDO66xGK5TPYqcbapbOGsl5OVIw6AglA5VlRrlL/pub">한국어</a>
-    <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vRxZwvmHNu-_uP7Rb2e5pR2ne_iPjZigRWKUEhjkzDO66xGK5TPYqcbapbOGsl5OVIw6AglA5VlRrlL/pub">日本語</a>
-  </div>
+    <div class="container-md mt-md-3 ">
+      <img src="images/eucalyptus-frame-top.png" class="img-fluid">
+      <p class="subtitle d-flex justify-content-center mt-md-4">Inchul</p>
+      <div class="d-flex justify-content-center btn-group" role="group">
+        <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vRxZwvmHNu-_uP7Rb2e5pR2ne_iPjZigRWKUEhjkzDO66xGK5TPYqcbapbOGsl5OVIw6AglA5VlRrlL/pub">English</a>
+        <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vRxZwvmHNu-_uP7Rb2e5pR2ne_iPjZigRWKUEhjkzDO66xGK5TPYqcbapbOGsl5OVIw6AglA5VlRrlL/pub">한국어</a>
+        <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vRxZwvmHNu-_uP7Rb2e5pR2ne_iPjZigRWKUEhjkzDO66xGK5TPYqcbapbOGsl5OVIw6AglA5VlRrlL/pub">日本語</a>
+      </div>
 
-</div>
+      <p class="subtitle d-flex justify-content-center mt-md-5"> Ivy & Christy</p>
+      <div class="d-flex justify-content-center btn-group" role="group">
+        <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vRxZwvmHNu-_uP7Rb2e5pR2ne_iPjZigRWKUEhjkzDO66xGK5TPYqcbapbOGsl5OVIw6AglA5VlRrlL/pub">English</a>
+        <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vQjyJZm5wxRw4-Drgo9mDnl70TvSyIj4Luk9oLi2ZKGkIgQqUWwnpEni4vX3vv827WNo4NM3mIYcnht/pub">한국어</a>
+        <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vQPUabLRY_hNUHJ1UZ_I71Z5iS8nGGf9FbJUxISGyaCfrulNu7jLBvhin5suu2BZE69zbkiLFmbVI7X/pub">日本語</a>
+      </div>
+      <img src="images/eucalyptus-frame-top.png" class="mt-md-5 img-fluid mirrored-vertical">
+    </div>
   </body>
 </html>
