--- a/wedding.html
+++ b/wedding.html
@@ -11,14 +11,14 @@
     <title>Seanna's Wedding Toasts</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark">
       <a class="navbar-brand" href="#">Seanna's Wedding Toasts</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
     </nav>
     <div class="container-md mt-md-3 ">
-      <img src="images/eucalyptus-frame-top.png" class="img-fluid">
+      <img src="images/eucalyptus-frame-top.png" class="img-frame img-fluid">
       <p class="subtitle d-flex justify-content-center mt-md-4">Inchul</p>
       <div class="d-flex justify-content-center btn-group" role="group">
         <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vRxZwvmHNu-_uP7Rb2e5pR2ne_iPjZigRWKUEhjkzDO66xGK5TPYqcbapbOGsl5OVIw6AglA5VlRrlL/pub">English</a>
@@ -32,7 +32,7 @@
         <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vQjyJZm5wxRw4-Drgo9mDnl70TvSyIj4Luk9oLi2ZKGkIgQqUWwnpEni4vX3vv827WNo4NM3mIYcnht/pub">한국어</a>
         <a class="btn btn-secondary btn-lg" target="_blank" role="button" href="https://docs.google.com/document/d/e/2PACX-1vQPUabLRY_hNUHJ1UZ_I71Z5iS8nGGf9FbJUxISGyaCfrulNu7jLBvhin5suu2BZE69zbkiLFmbVI7X/pub">日本語</a>
       </div>
-      <img src="images/eucalyptus-frame-top.png" class="mt-md-5 img-fluid mirrored-vertical">
+      <img src="images/eucalyptus-frame-top.png" class="mt-md-5 img-frame img-fluid mirrored-vertical">
     </div>
   </body>
 </html>
