--- a/wedding.html
+++ b/wedding.html
@@ -12,7 +12,10 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-dark">
-      <a class="navbar-brand" href="#">Seanna's Wedding Toasts</a>
+      <a class="navbar-brand" href="#">
+        <img src="images/seanna.svg" width="90" height="90" alt="seanna logo">
+        Seanna's Wedding Toasts
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
