--- a/wedding.html
+++ b/wedding.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <script src="bs4/jquery-3.4.1.slim.min.js"></script>
     <script src="bs4/popper.min.js"></script>
     <link rel="stylesheet" href="bs4/bootstrap.min.css">
